# kalico

./: Communication_Protocol.html  Config_Reference.html  sitemap.xml
config/: sample-hc595.cfg
docs/: Communication_Protocol.md  Config_Reference.md
i18n/simple-chinese/: API_Server.html  Axis_Twist_Compensation.html  BLTouch.html  Beaglebone.html  Bed_Level.html  Bed_Mesh.html  Benchmarks.html  Bleeding_Edge.html  Bootloader_Entry.html  Bootloaders.html  CANBUS.html  CANBUS_Troubleshooting.html  CANBUS_protocol.html  CONTRIBUTING.html  Code_Overview.html  Command_Templates.html  Communication_Protocol.html  Config_Changes.html  Config_Reference.html  Config_Reference_Bleeding_Edge.html  Config_checks.html  Contact.html  Debugging.html  Delta_Calibrate.html  Dockable_Probe.html  Endstop_Phase.html  Example_Configs.html  Exclude_Object.html  FAQ.html  Features.html  G-Code_Shell_Command.html  G-Codes.html  Hall_Filament_Width_Sensor.html  Installation.html  Kalico_Additions.html  Kinematics.html  Load_Cell.html  MCU_Commands.html  MPC.html  (+26 more)
klippy/: mcu.py  printer.py  queuelogger.py  stepper.py  toolhead.py
other/mcu_sim/: README.md  pyproject.toml  requirements.txt
other/mcu_sim/examples/: test_with_debug_tool.py
other/mcu_sim/mcu_sim/: __init__.py  __main__.py  cli.py  core.py  firmware.py  protocol_test.py  py_mcu.py  virtual_serial.py
other/mcu_sim/mcu_sim/backends/: __init__.py  qemu_backend.py  registry.py
other/mcu_sim/mcu_sim/configs/: atmega2560.json  atmega328p.json  esp32.json  imxrt1062.json  sam3x8e.json
search/: search_index.json
(+164 files in other folders)
