[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcu_sim"
version = "0.1.0"
description = "MCU firmware simulator for Kalico 3D printer firmware protocol testing"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10"
authors = [
    {name = "KalicoCrew"},
]
keywords = ["kalico", "klipper", "mcu", "simulator", "emulator", "3d-printer", "firmware"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Emulators",
]

[project.urls]
Homepage = "https://kalico.xyz/"
Repository = "https://github.com/KalicoCrew/kalico"

[project.scripts]
mcu_sim = "mcu_sim.cli:main"

[tool.setuptools.packages.find]
where = ["."]
